feat: Basic D3 support and force directed graph

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
             <h1>Horizon</h1>
         </header>
         <main class="page-body" id="app"></main>
+        <svg></svg>
         <footer class="page-footer">
             <img src="public/images/sigma-logo.png" alt="Sigma" width="200" />
         </footer>
